--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -45,7 +45,7 @@ nlu:
   examples: |
     - Tìm việc giúp tôi
     - Tìm việc làm giúp tôi được không ?
-    - Tôi muốn tìm việc làm ở [Google](company)
-    - Cần tìm một công việc yêu cầu kỹ năng [Python](skills)
-    - Tôi đang tìm việc với mức lương khoảng [1000 USD](salary)
+    - Tôi muốn tìm việc làm 
+    - Cần tìm một công việc yêu cầu kỹ năng 
+    - Tôi đang tìm việc với mức lương khoảng 
 
